--- a/Stableswap.ipynb
+++ b/Stableswap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Stableswap function that outputs token supply of Y, given X, A factor, and D (the sum of the two tokens when in parity)\n",
-    "def sampleStable(x = 5,A = 10,D = 100, n = 2):\n",
+    "def sampleStable(x = 50,A = 10,D = 100, n = 2):\n",
     "    if x<D:\n",
     "        y = (-(A*4)*(x**2) + A*D*x*n**n - D*x + math.sqrt(((A*n**n)*(x**2) - A*D*x*n**n + D*x)**2 + 4*A*x*n**n*((D**(n+1))/n**n)))/(2*A*x*n**n)\n",
     "        return y\n",
@@ -74,13 +74,79 @@
     "    price = (math.sin(2* season/24)/25 + avgPrice) + (math.sin(50*season*(random.randint(0, 100)/100))/100)\n",
     "    return price                "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sample to calculate how many of token Y given quantity of token X, and total assets.\n",
+    "# Inital conditions: \n",
+    "# Total sum of assets when in parity: 100\n",
+    "# Amount of token X: 50\n",
+    "# A factor: 10\n",
+    "print(sampleStable())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Outputs the bean and usdc in a pool at 1.02\n",
+    "# assumes 10m USDC, A factor of 10\n",
+    "stableSwap(10_000_000,1.02,A = 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.0 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "d7c99dddd7c90bd1e94e97ec021906d14c06adc1adfe8a369747ed41b4b3d9ca"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
