--- a/Stableswap.ipynb
+++ b/Stableswap.ipynb
@@ -110,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Outputs the bean and usdc in a pool at 1.02\n",
+    "# Outputs the bean and usdc in a pool, and total assets at parity at 1.02\n",
     "# assumes 10m USDC, A factor of 10\n",
     "stableSwap(10_000_000,1.02,A = 10)"
    ]
