--- a/Stableswap.ipynb
+++ b/Stableswap.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
     "    return [newBean,usdc,D]\n",
     "\n",
     "#given bean,usdc,D size, and A factor, output price \n",
-    "def getPrice(Bean,usdc,D, amtIn = 1,A=10):\n",
+    "def getPrice(usdc,D, amtIn = 1,A=10):\n",
     "    amtOut =sampleStable(usdc,A,D,2) - sampleStable(usdc + amtIn,A,D,2)\n",
     "    price = amtIn/amtOut\n",
     "    return price\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -106,21 +106,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0000476190907506"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Outputs the bean and usdc in a pool, and total assets at parity at 1.02\n",
+    "getPrice(1000,2000,1,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6749235.858161078, 10000000, 16733668.341708543]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Outputs the bean and usdc in a pool at 1.02\n",
     "# assumes 10m USDC, A factor of 10\n",
     "stableSwap(10_000_000,1.02,A = 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# the amount of bean in the pool that can be acquired with 1% slippage given A factor\n",
+    "# assumes slippage occurs at parity \n",
+    "def slippageFinder(slippage, A):\n",
+    "    priceblah = 0\n",
+    "    i = 0\n",
+    "    print(abs(priceblah - (1 + slippage)))\n",
+    "    # estimate the % of bean you can obtain from the pool by comparing the price you got\n",
+    "    while  abs(priceblah - (1 + slippage)) > 0.0001:\n",
+    "        i = i + 1\n",
+    "        priceblah = getPrice(1000,2000,i,A)\n",
+    "    New_Curve_Price = getPrice(1000 + i,2000,1,A)\n",
+    "    \n",
+    "    \n",
+    "    return [i/1000,New_Curve_Price]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.01\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.788, 1.0506661570346563]"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slippageFinder(0.01,100)"
+   ]
   }
  ],
  "metadata": {
